Add primitive value conversion support for parameters